[package]
name = "footprint"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
flate2 = { version = "1.0.30", features = ["zlib-ng"], default-features = false }
gzp = "0.11.3"
log = "0.4.22"
pretty_env_logger = "0.5.0"
rust-lapper = "1.1.0"
rustc-hash = "2.0.0"
tikv-jemallocator = "0.5"
ndarray = "0.15"
csv = "1.3"
rayon = "1.10.0"
smallvec = "1.15.1"
bio = "3.0.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.145"
hdf5 = "0.8.1"

[profile.release]
panic = "abort"
